[package]
name = "ws-file-changed"
version = "0.1.0"
authors = ["Denis Kerner <dtricks@live.de>"]
edition = "2018"

[dependencies]
tungstenite = "0.13.0"
tokio-tungstenite = "0.14.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.15"
futures-channel = "0.3.15"
url = "2.2.2"
log = "0.4.14"
env_logger = "0.8.3"
crossbeam-channel = "0.5.1"
notify = "5.0.0-pre.8"